# IngeInv

./: .gitignore  Ingenieria.py  IngenieriaScreen.kt  LICENSE  README.md  contour_fourier.py  pyproject.toml  requirements.txt
src/ingeinv/: __init__.py  database.py  main.py
src/ingeinv/models/: __init__.py  component.py  failure_prediction.py  machine.py  maintenance_record.py  sensor_reading.py
src/ingeinv/routers/: __init__.py  machines.py  maintenance.py  predictions.py
src/ingeinv/schemas/: __init__.py  component.py  failure_prediction.py  machine.py  maintenance_record.py  sensor_reading.py
src/ingeinv/services/: __init__.py  machine_service.py  maintenance_service.py  prediction_service.py
tests/: conftest.py  test_machines.py  test_maintenance.py  test_predictions.py
